# borsapy

./: .gitignore  README.md  pyproject.toml
borsapy/: __init__.py  cache.py  exceptions.py  portfolio.py  screener.py  ticker.py  viop.py
borsapy/_models/: __init__.py
borsapy/_providers/: __init__.py  base.py  hedeffiyat.py  isyatirim.py  kap.py  paratic.py  viop.py
docs/: borsapy.html  search.js
